fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
   font-family: "comfortaa";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
